# iffyuan-XArm-Toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: hardware.yaml
configs/tasks/: default.yaml  plug.yaml  stamp.yaml
docs/: 01-硬件与环境配置.md  02-机械臂控制.md  03-相机系统.md  04-遥操作与数据采集.md  05-模型部署.md  06-故障排除.md  07-LeRobot集成采集.md  4.5-ACT训练全流程.md
lerobot/src/lerobot/robots/: __init__.py  utils.py
lerobot/src/lerobot/robots/xarm6/: __init__.py  config_xarm6.py  xarm6.py
lerobot/src/lerobot/scripts/: lerobot_record.py  lerobot_teleoperate.py
lerobot/src/lerobot/teleoperators/: __init__.py  utils.py
lerobot/src/lerobot/teleoperators/spacemouse_xarm6/: __init__.py  config_spacemouse_xarm6.py  spacemouse_xarm6.py
lerobot_xarm6/: pyproject.toml
lerobot_xarm6/lerobot_robot_xarm6/: __init__.py  config_xarm6.py  xarm6.py
lerobot_xarm6/lerobot_teleoperator_spacemouse_xarm6/: __init__.py  config_spacemouse_xarm6.py  spacemouse_xarm6.py
reference/: collect.py  realsense_env.py  spacemouse_slow.py  xarm_env.py  xarm_env_force.py  xarm_env_no_force.py
scripts/: collect_data.py  convert_to_lerobot.py  deploy_diffusion.py  deploy_local.py  deploy_vla.py  fix_zarr.py  openpi_server.py  start_server.py  teleop_demo.py  test_cameras.py  test_env.py  test_web_control.py  train_act.py  upload_dataset.py  verify_lerobot.py  web_control_demo.py
tests/: test_deploy.py  test_realsense_env.py  test_xarm_env.py
xarm_toolkit/: __init__.py
xarm_toolkit/collect/: __init__.py  collector.py
xarm_toolkit/deploy/: __init__.py  client.py  msgpack_numpy.py  openpi_server.py  robot_deploy.py  server.py
xarm_toolkit/env/: __init__.py  realsense_env.py  xarm_env.py
xarm_toolkit/utils/: logger.py
