[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-xarm6"
version = "0.1.0"
description = "LeRobot plugins for XArm6: robot adapter + SpaceMouse teleoperator"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "lerobot>=0.4",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "open3d>=0.17",
    "pytransform3d>=3.0",
    "pyspacemouse>=1.0",
    "hidapi>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["lerobot_robot_xarm6*", "lerobot_teleoperator_spacemouse_xarm6*"]
